--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <app-recipies></app-recipies>
+      między 1
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
