--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <div class="col-md-12">
       <app-recipies></app-recipies>
       między 1
+      między 2
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
