--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
       <app-recipies></app-recipies>
-      między 1
-      między 2
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
-
-dwie linijki
-trzecia linijka
